# giste

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: protozoo.cmake
src/: CMakeLists.txt  config.yaml.template  dll_load.cpp.template  version.h.template
src/giste-core/: CMakeLists.txt  config.cpp  plugin.cpp  plugin.h  plugin_handler.cpp  plugin_handler.h  version.cpp  version.h
src/giste-engine/: CMakeLists.txt  engine.cpp  engine.h
src/giste-engine/cli/: CMakeLists.txt  main.cpp
src/giste-plugin-pln/: CMakeLists.txt  instantation.cpp  tokenize.cpp  tokenize.h
src/giste-utils/: CMakeLists.txt
src/protozoo-core/: CMakeLists.txt  config.cpp  config.h  plugin.cpp  plugin.h  plugin_handler.cpp  plugin_handler.h  version.cpp  version.h
src/protozoo-engine/: CMakeLists.txt  engine.cpp  engine.h
src/protozoo-engine/cli/: CMakeLists.txt  main.cpp
src/protozoo-plugin-pln/: CMakeLists.txt  instantation.cpp  tokenize.cpp  tokenize.h
src/protozoo-utils/: CMakeLists.txt  enum_parser.h  str_conversion.cpp  str_conversion.h
tests/: CMakeLists.txt
